--- a/src/resources/views/admin/danhmuc/xa.ejs
+++ b/src/resources/views/admin/danhmuc/xa.ejs
@@ -54,7 +54,7 @@
 
                                         </select>
                                     </div>
-                                    <!-- <div class="col-md-6">
+                                    <div class="col-md-6">
                                         <label for="validationCustom02" class="form-label">Tên thành phố</label>
                                         <select class="form-control" name="ten_thanh_pho" id="">
                                             <% if (thanhPhoList && thanhPhoList.length> 0) { %>
@@ -69,7 +69,7 @@
                                                             <% } %>
 
                                         </select>
-                                    </div> -->
+                                    </div>
                                     <div class="col-12">
                                         <button class="btn btn-primary" type="submit">Submit form</button>
                                     </div>
