--- a/src/resources/views/user/headerUser.ejs
+++ b/src/resources/views/user/headerUser.ejs
@@ -21,6 +21,7 @@
   <link rel="stylesheet" href="/css/user.css">
   <!-- Font Awesome -->
   <link rel="stylesheet" href="/admin/plugins/fontawesome-free/css/all.min.css">
+  <link rel="stylesheet" href="/font/fontawesome-free-6.5.1-web/css/all.min.css">
   <!-- Ionicons -->
   <link rel="stylesheet" href="https://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css">
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js"
