--- a/src/resources/views/user/tai_khoan.ejs
+++ b/src/resources/views/user/tai_khoan.ejs
@@ -11,7 +11,7 @@
                     <ul class="">
                         <li class="item_"><a href="/tai_khoan">Tài khoản của tôi</a></li>
                         <li class="item_ mt-3"><a href="/order">Dơn mua hàng</a></li>
-                        <li class="item_ mt-3"><a>Đơn bảo hành</a></li>
+                        <li class="item_ mt-3"><a href="/bao_hanh">Đơn bảo hành</a></li>
                         <li class="item_ mt-3 pb-3"><a href="/lich_su_mua_hang">Lịch sử mua hàng</a></li>
                     </ul>
                 </div>
