--- a/src/resources/views/admin/aside.ejs
+++ b/src/resources/views/admin/aside.ejs
@@ -146,7 +146,7 @@
                     </a>
                 </li>
                 <li class="nav-item has-treeview">
-                    <a href="#" class="nav-link">
+                    <a href="/admin/baohanh" class="nav-link">
                         <i class="nav-icon fas fa-table"></i>
                         <p>
                             Bảo hành
